# httpxr

./: AGENTS.md  Cargo.toml  README.md  test_errors.txt  zensical.toml
docs/: cookbook.ipynb  cookbook.md  index.md
httpxr/: _httpxr.pyi  compat.py
src/: config.rs
src/client/: sync_client.rs  sync_client_ext.rs
tests/: test_compat.py  test_httpx_api_compat.py
